update-all-click-almost done 3